--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@walletconnect/web3-provider": "^1.6.6",
     "bootstrap": "^4.6.0",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.5",
@@ -30,7 +31,8 @@
     "source-map-loader": "^3.0.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1",
-    "web3": "^1.4.0"
+    "web3": "^1.4.0",
+    "web3modal": "^1.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
