--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@walletconnect/web3-provider": "^1.7.0",
+    "axios": "^0.24.0",
     "bootstrap": "^4.6.0",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.5",
